fix: wrapped text

--- a/src/styles/dialogs.module.css
+++ b/src/styles/dialogs.module.css
@@ -30,7 +30,6 @@
 }
 
 .chat-area-card-heading {
-  width: 49px;
   height: 17px;
   font-size: 16px;
   font-weight: bold;
